// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpcomingDepartures doesn't renders cr departures that don't have a predicted time yet 1`] = `null`;

exports[`UpcomingDepartures renders SL bus predictions 1`] = `
Array [
  <div
    className="schedule-table__upcoming-departures-header"
  >
    <h3>
      Upcoming Departures
    </h3>
    <span
      aria-hidden={true}
      className="schedule-table__live-clock"
    >
      <span
        className="icon-realtime animate notranslate"
      >
        <span
          className="c-svg__icon-live-clock"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        <span
          className="icon-realtime-text"
        >
          live
        </span>
      </span>
    </span>
  </div>,
  <table
    className="schedule-table schedule-table--upcoming"
  >
    <thead
      className="schedule-table__header"
    >
      <tr
        className="schedule-table__row-header"
      >
        <th
          className="schedule-table__cell"
          scope="col"
        >
          Destinations
        </th>
        <th
          className="schedule-table__cell"
          colSpan={2}
          scope="col"
        >
          Trip Details
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        aria-controls="trip-41894293"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__cell schedule-table__cell--headsign"
        >
          <span
            className="schedule-table__route-pill m-route-pills"
          >
            <span
              className="c-icon__bus-pill--small u-bg--silver-line"
            >
              SL-2
            </span>
          </span>
          Harvard
        </td>
        <td
          className="schedule-table__cell schedule-table__cell--time u-nowrap u-bold text-right"
        >
          8
           
          min
        </td>
        <td
          className="schedule-table__cell schedule-table__cell--tiny"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`UpcomingDepartures renders bus predictions 1`] = `
Array [
  <div
    className="schedule-table__upcoming-departures-header"
  >
    <h3>
      Upcoming Departures
    </h3>
    <span
      aria-hidden={true}
      className="schedule-table__live-clock"
    >
      <span
        className="icon-realtime animate notranslate"
      >
        <span
          className="c-svg__icon-live-clock"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        <span
          className="icon-realtime-text"
        >
          live
        </span>
      </span>
    </span>
  </div>,
  <table
    className="schedule-table schedule-table--upcoming"
  >
    <thead
      className="schedule-table__header"
    >
      <tr
        className="schedule-table__row-header"
      >
        <th
          className="schedule-table__cell"
          scope="col"
        >
          Destinations
        </th>
        <th
          className="schedule-table__cell"
          colSpan={2}
          scope="col"
        >
          Trip Details
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        aria-controls="trip-41894293"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__cell schedule-table__cell--headsign"
        >
          <span
            className="schedule-table__route-pill m-route-pills"
          >
            <span
              className="c-icon__bus-pill--small u-bg--bus"
            >
              1
            </span>
          </span>
          Harvard
        </td>
        <td
          className="schedule-table__cell schedule-table__cell--time u-nowrap u-bold text-right"
        >
          8
           
          min
        </td>
        <td
          className="schedule-table__cell schedule-table__cell--tiny"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
      <tr
        aria-controls="trip-41894271"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__cell schedule-table__cell--headsign"
        >
          <span
            className="schedule-table__route-pill m-route-pills"
          >
            <span
              className="c-icon__bus-pill--small u-bg--bus"
            >
              1
            </span>
          </span>
          Harvard
        </td>
        <td
          className="schedule-table__cell schedule-table__cell--time u-nowrap u-bold text-right"
        >
          9
           
          min
        </td>
        <td
          className="schedule-table__cell schedule-table__cell--tiny"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`UpcomingDepartures renders cr predictions 1`] = `
Array [
  <div
    className="schedule-table__upcoming-departures-header"
  >
    <h3>
      Upcoming Departures
    </h3>
    <span
      aria-hidden={true}
      className="schedule-table__live-clock"
    >
      <span
        className="icon-realtime animate notranslate"
      >
        <span
          className="c-svg__icon-live-clock"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        <span
          className="icon-realtime-text"
        >
          live
        </span>
      </span>
    </span>
  </div>,
  <table
    className="schedule-table schedule-table--upcoming"
  >
    <thead
      className="schedule-table__header"
    >
      <tr
        className="schedule-table__row-header"
      >
        <th
          className="schedule-table__cell"
          scope="col"
        >
          Destinations
        </th>
        <th
          className="schedule-table__cell"
          colSpan={2}
          scope="col"
        >
          Trip Details
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        aria-controls="trip-CR-Weekday-Fall-19-515"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__cell schedule-table__cell--headsign"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
           
          Worcester
        </td>
        <td
          className="schedule-table__cell text-right"
        >
          <div
            className="u-tabular-nums u-nowrap schedule-table__times"
          >
            1:55 PM
          </div>
          <div
            className="u-nowrap"
          >
            Train 515 · On time
            
          </div>
        </td>
        <td
          className="schedule-table__cell schedule-table__cell--tiny"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
    </tbody>
  </table>,
]
`;
